--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>uiCookies:Resto &mdash; Free Bootstrap Theme, Free Restaurant Responsive Bootstrap Website Template</title>
+    <title>uiCookies:Safloxo &mdash; Les Meilleures recettes de cuisine africaine</title>
     <meta name="description" content="Free Bootstrap Theme by uicookies.com">
-    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    <meta name="keywords" content="Les Meilleures recettes de cuisine africaine">
     
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Pinyon+Script" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
@@ -52,9 +52,9 @@
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
                 <div class="probootstrap-slider-text text-center probootstrap-animate probootstrap-heading">
-                  <h1 class="primary-heading">Welcome</h1>
-                  <h3 class="secondary-heading">The Resto</h3>
-                  <p class="sub-heading">A free bootstrap website template by <a href="https://uicookies.com">uicookies.com</a></p>
+                  <h1 class="primary-heading">Bienvenue</h1>
+                  <h3 class="secondary-heading">sur Safloxo</h3>
+                  <p class="sub-heading">Les Meilleures recettes de cuisine africaine par <a href="https://uicookies.com">Safloxo</a></p>
                 </div>
               </div>
             </div>
@@ -67,7 +67,7 @@
                 <div class="probootstrap-slider-text text-center probootstrap-animate probootstrap-heading">
                   <h1 class="primary-heading">Dine</h1>
                   <h3 class="secondary-heading">With Us</h3>
-                  <p class="sub-heading">A free bootstrap website template by <a href="https://uicookies.com">uicookies.com</a></p>
+                  <p class="sub-heading">Les Meilleures recettes de cuisine africaine par <a href="https://uicookies.com">Safloxo</a></p>
                 </div>
               </div>
             </div>
@@ -81,7 +81,7 @@
                 <div class="probootstrap-slider-text text-center probootstrap-animate probootstrap-heading">
                   <h1 class="primary-heading">Enjoy</h1>
                   <h3 class="secondary-heading">With Us</h3>
-                  <p class="sub-heading">A free bootstrap website template by <a href="https://uicookies.com">uicookies.com</a></p>
+                  <p class="sub-heading">Les Meilleures recettes de cuisine africaine par <a href="https://uicookies.com">Safloxo</a></p>
                 </div>
               </div>
             </div>
@@ -504,7 +504,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8">
-            <p class="copyright-text">&copy; 2017 <a href="https://uicookies.com/">uiCookies:Resto</a>. All Rights Reserved. Images by <a href="https://graphicburger.com/">GraphicBurger</a> &amp; <a href="https://unsplash.com/">Unsplash</a></p>
+            <p class="copyright-text">&copy; 2022 <a href="https://uicookies.com/">uiCookies:Safloxo</a>. All Rights Reserved. Images by <a href="https://graphicburger.com/">GraphicBurger</a> &amp; <a href="https://unsplash.com/">Unsplash</a></p>
           </div>
           <div class="col-md-4">
             <ul class="probootstrap-footer-social right">
